--- a/gitops/apps/home-assistant/helpers-input-text-configmap.yaml
+++ b/gitops/apps/home-assistant/helpers-input-text-configmap.yaml
@@ -1,6 +1,15 @@
 apiVersion: v1
+kind: ConfigMap
+metadata:
+  name: homeassistant-helpers-input-text
 data:
   event_image_location.yaml: |
+    # Global input_text helper for pet detection event location
+    event_image_location:
+      name: "Event Image Location Text"
+      initial: ""
+      max: 50
+  event_image_location_text.yaml: |
     # Global input_text helper for pet detection event location
     event_image_location:
       name: Event Image Location Text
@@ -9,15 +18,18 @@ data:
   event_image_timestamp.yaml: |
     # Global input_text helper for pet detection event timestamp
     event_image_timestamp:
+      name: "Event Image Timestamp Text"
+      initial: ""
+      max: 20
+  event_image_timestamp_text.yaml: |
+    # Global input_text helper for pet detection event timestamp
+    event_image_timestamp:
       name: Event Image Timestamp Text
       initial: ""
-      max: 50
+      max: 20
   set_value.yaml: |
     # Global input_text helper for set_value automation
     set_value:
-      name: Set Value
+      name: "Set Value"
       initial: ""
       max: 255
-kind: ConfigMap
-metadata:
-  name: homeassistant-helpers-input-text
