--- a/gitops/apps/home-assistant/configuration/scripts/power_on.yaml
+++ b/gitops/apps/home-assistant/configuration/scripts/power_on.yaml
@@ -2,7 +2,6 @@ scheduled_light_on:
   alias: "Scheduled Light On (safe)"
   mode: "restart"
   fields:
-    room_key: {}
     custom_schedule_enabled: { required: false }
     custom_s1_start: { required: false }
     custom_s2_start: { required: false }
@@ -45,22 +44,30 @@ scheduled_light_on:
           {% elif now_ts >= s3 and now_ts < s4 %}evening
           {% else %}night{% endif %}
 
-        _override_select: "{{ 'input_select.' ~ (room_key | default('')) ~ '_' ~ slot ~ '_scene' }}"
+        # Extract entity name from fallback_lights for scene naming
+        _fb_entity: "{{ fallback_lights | default('') }}"
+        _entity_name: >-
+          {% set entity = _fb_entity %}
+          {% if entity is string and entity != '' and entity|length >= 6 and entity[:6] == 'light.' %}
+            {{ entity[6:] }}
+          {% else %}
+            {{ entity }}
+          {% endif %}
+
+        _override_select: "{{ 'input_select.' ~ _entity_name ~ '_' ~ slot ~ '_scene' }}"
         _override_val: >-
-          {% set val = states(_override_select) if room_key | default('') else '' %}
+          {% set val = states(_override_select) if _entity_name and _entity_name != '' else '' %}
           {{ '' if val in ['unknown','unavailable','', None] else val }}
 
-        default_scene_entity_id: "scene.{{ room_key | default('') }}_{{ slot }}"
+        default_scene_entity_id: "scene.{{ _entity_name }}_{{ slot }}"
         scene_to_activate: "{{ _override_val if _override_val else default_scene_entity_id }}"
         scene_exists: >-
           {{ scene_to_activate in (states.scene | map(attribute='entity_id') | list) if scene_to_activate else false }}
 
-        preferred_room_light: "light.{{ room_key | default('') }}"
         all_lights: "{{ states.light | map(attribute='entity_id') | list }}"
         dynamic_fallback: >-
           {% set fb = fallback_lights | default('') %}
           {% if fb and fb != '' and fb in all_lights %}{{ fb }}
-          {% elif preferred_room_light in all_lights %}{{ preferred_room_light }}
           {% else %}{{ '' }}{% endif %}
     - choose:
         - conditions: "{{ scene_exists }}"
