--- a/gitops/apps/home-assistant/dashboards-configmap.yaml
+++ b/gitops/apps/home-assistant/dashboards-configmap.yaml
@@ -1,86 +1,311 @@
 apiVersion: v1
-data:
-  living_room_lighting.yaml: |
-    title: Lighting – Living Room
-    path: lighting-living-room
-    icon: mdi:lightbulb-group
-    cards:
-      - type: vertical-stack
-        cards:
-          - type: markdown
-            content: |
-              ## Living Room – Lighting
-              Control schedule, scenes, and brightness for the living room.
-          - type: entities
-            title: Schedule
-            show_header_toggle: false
-            entities:
-              - entity: input_boolean.living_room_custom_schedule
-                name: Use custom schedule
-              - entity: input_datetime.living_room_s1_start
-                name: Morning starts
-              - entity: input_datetime.living_room_s2_start
-                name: Day starts
-              - entity: input_datetime.living_room_s3_start
-                name: Evening starts
-              - entity: input_datetime.living_room_s4_start
-                name: Night starts
-          - type: entities
-            title: Scenes per window
-            show_header_toggle: false
-            entities:
-              - entity: input_select.living_room_morning_scene
-                name: Morning scene
-              - entity: input_select.living_room_day_scene
-                name: Day scene
-              - entity: input_select.living_room_evening_scene
-                name: Evening scene
-              - entity: input_select.living_room_night_scene
-                name: Night scene
-          - type: entities
-            title: Brightness controls
-            show_header_toggle: false
-            entities:
-              - entity: input_number.living_room_brightness_step_pct
-                name: Step (%)
-              - entity: input_number.living_room_min_brightness_pct
-                name: Min (%)
-              - entity: input_number.living_room_max_brightness_pct
-                name: Max (%)
-          - type: entities
-            title: Timer settings
-            show_header_toggle: false
-            entities:
-              - entity: input_boolean.enable_living_room_morning
-                name: Morning enabled
-              - entity: input_boolean.auto_on_living_room_morning
-                name: Morning auto-on
-              - entity: input_boolean.enable_living_room_day
-                name: Day enabled
-              - entity: input_boolean.auto_on_living_room_day
-                name: Day auto-on
-              - entity: input_boolean.enable_living_room_evening
-                name: Evening enabled
-              - entity: input_boolean.auto_on_living_room_evening
-                name: Evening auto-on
-              - entity: input_boolean.enable_living_room_night
-                name: Night enabled
-              - entity: input_boolean.auto_on_living_room_night
-                name: Night auto-on
-          - type: entities
-            title: Motion (extras for this room)
-            show_header_toggle: false
-            entities:
-              - entity: input_boolean.living_room_motion_enabled
-                name: Motion control enabled
-              - entity: input_number.living_room_morning_auto_off
-                name: Morning auto-off (min)
-              - entity: input_number.living_room_day_auto_off
-                name: Day auto-off (min)
-              - entity: input_number.living_room_evening_auto_off
-                name: Evening auto-off (min)
-              - entity: input_number.living_room_night_auto_off
-                name: Night auto-off (min)
 kind: ConfigMap
 metadata:
   name: homeassistant-dashboards
+data:
+  room_switch_control.yaml: |
+    type: vertical-stack
+    cards:
+      # Room selector dropdown
+      - type: entities
+        title: Select Room
+        entities:
+          - entity: input_select.room_selector
+            name: Room
+    
+      # Active Scene Status Card
+      - type: markdown
+        title: Current Status
+        content: |
+          {% set room = states('input_select.room_selector') %}
+          {% if room and room != 'unknown' and room != 'unavailable' %}
+            {% set custom_schedule = states('input_boolean.' ~ room ~ '_custom_schedule') %}
+            {% set s1 = states('input_datetime.' ~ room ~ '_s1_start') if custom_schedule == 'on' else '06:00:00' %}
+            {% set s2 = states('input_datetime.' ~ room ~ '_s2_start') if custom_schedule == 'on' else '09:00:00' %}
+            {% set s3 = states('input_datetime.' ~ room ~ '_s3_start') if custom_schedule == 'on' else '17:00:00' %}
+            {% set s4 = states('input_datetime.' ~ room ~ '_s4_start') if custom_schedule == 'on' else '22:00:00' %}
+            {% set now_ts = as_timestamp(now()) %}
+            {% set s1_ts = as_timestamp(today_at(s1)) %}
+            {% set s2_ts = as_timestamp(today_at(s2)) %}
+            {% set s3_ts = as_timestamp(today_at(s3)) %}
+            {% set s4_ts = as_timestamp(today_at(s4)) %}
+            {% if now_ts >= s1_ts and now_ts < s2_ts %}
+              {% set current_slot = 'morning' %}
+              {% set next_transition = s2[:5] %}
+              {% set next_slot = 'day' %}
+            {% elif now_ts >= s2_ts and now_ts < s3_ts %}
+              {% set current_slot = 'day' %}
+              {% set next_transition = s3[:5] %}
+              {% set next_slot = 'evening' %}
+            {% elif now_ts >= s3_ts and now_ts < s4_ts %}
+              {% set current_slot = 'evening' %}
+              {% set next_transition = s4[:5] %}
+              {% set next_slot = 'night' %}
+            {% else %}
+              {% set current_slot = 'night' %}
+              {% set next_transition = s1[:5] %}
+              {% set next_slot = 'morning' %}
+            {% endif %}
+            {% set scene_cycle = states('input_select.' ~ room ~ '_scene_cycle') %}
+            
+            ### **{{ current_slot|title }} Scene Active**
+            
+            {% if scene_cycle and scene_cycle != 'unknown' and scene_cycle != 'unavailable' %}
+              Manual override: {{ scene_cycle|title }}
+            {% endif %}
+            
+            Next transition: **{{ next_transition }}** → {{ next_slot|title }}
+          {% else %}
+            Please select a room above.
+          {% endif %}
+    
+      # Manual Scene Control Buttons - Conditional cards per room
+      - type: conditional
+        conditions:
+          - entity: input_select.room_selector
+            state: bathroom
+        card:
+          type: horizontal-stack
+          cards:
+            - type: button
+              entity: scene.bathroom_morning
+              name: Morning
+              tap_action:
+                action: call-service
+                service: scene.turn_on
+                service_data:
+                  entity_id: scene.bathroom_morning
+              show_state: false
+            - type: button
+              entity: scene.bathroom_day
+              name: Day
+              tap_action:
+                action: call-service
+                service: scene.turn_on
+                service_data:
+                  entity_id: scene.bathroom_day
+              show_state: false
+            - type: button
+              entity: scene.bathroom_evening
+              name: Evening
+              tap_action:
+                action: call-service
+                service: scene.turn_on
+                service_data:
+                  entity_id: scene.bathroom_evening
+              show_state: false
+            - type: button
+              entity: scene.bathroom_night
+              name: Night
+              tap_action:
+                action: call-service
+                service: scene.turn_on
+                service_data:
+                  entity_id: scene.bathroom_night
+              show_state: false
+    
+      - type: conditional
+        conditions:
+          - entity: input_select.room_selector
+            state: bedroom
+        card:
+          type: horizontal-stack
+          cards:
+            - type: button
+              entity: scene.bedroom_morning
+              name: Morning
+              tap_action:
+                action: call-service
+                service: scene.turn_on
+                service_data:
+                  entity_id: scene.bedroom_morning
+              show_state: false
+            - type: button
+              entity: scene.bedroom_day
+              name: Day
+              tap_action:
+                action: call-service
+                service: scene.turn_on
+                service_data:
+                  entity_id: scene.bedroom_day
+              show_state: false
+            - type: button
+              entity: scene.bedroom_evening
+              name: Evening
+              tap_action:
+                action: call-service
+                service: scene.turn_on
+                service_data:
+                  entity_id: scene.bedroom_evening
+              show_state: false
+            - type: button
+              entity: scene.bedroom_night
+              name: Night
+              tap_action:
+                action: call-service
+                service: scene.turn_on
+                service_data:
+                  entity_id: scene.bedroom_night
+              show_state: false
+    
+      - type: conditional
+        conditions:
+          - entity: input_select.room_selector
+            state: hallway
+        card:
+          type: horizontal-stack
+          cards:
+            - type: button
+              entity: scene.hallway_morning
+              name: Morning
+              tap_action:
+                action: call-service
+                service: scene.turn_on
+                service_data:
+                  entity_id: scene.hallway_morning
+              show_state: false
+            - type: button
+              entity: scene.hallway_day
+              name: Day
+              tap_action:
+                action: call-service
+                service: scene.turn_on
+                service_data:
+                  entity_id: scene.hallway_day
+              show_state: false
+            - type: button
+              entity: scene.hallway_evening
+              name: Evening
+              tap_action:
+                action: call-service
+                service: scene.turn_on
+                service_data:
+                  entity_id: scene.hallway_evening
+              show_state: false
+            - type: button
+              entity: scene.hallway_night
+              name: Night
+              tap_action:
+                action: call-service
+                service: scene.turn_on
+                service_data:
+                  entity_id: scene.hallway_night
+              show_state: false
+    
+      - type: conditional
+        conditions:
+          - entity: input_select.room_selector
+            state: kitchen
+        card:
+          type: horizontal-stack
+          cards:
+            - type: button
+              entity: scene.kitchen_morning
+              name: Morning
+              tap_action:
+                action: call-service
+                service: scene.turn_on
+                service_data:
+                  entity_id: scene.kitchen_morning
+              show_state: false
+            - type: button
+              entity: scene.kitchen_day
+              name: Day
+              tap_action:
+                action: call-service
+                service: scene.turn_on
+                service_data:
+                  entity_id: scene.kitchen_day
+              show_state: false
+            - type: button
+              entity: scene.kitchen_evening
+              name: Evening
+              tap_action:
+                action: call-service
+                service: scene.turn_on
+                service_data:
+                  entity_id: scene.kitchen_evening
+              show_state: false
+            - type: button
+              entity: scene.kitchen_night
+              name: Night
+              tap_action:
+                action: call-service
+                service: scene.turn_on
+                service_data:
+                  entity_id: scene.kitchen_night
+              show_state: false
+    
+      - type: conditional
+        conditions:
+          - entity: input_select.room_selector
+            state: living_room
+        card:
+          type: horizontal-stack
+          cards:
+            - type: button
+              entity: scene.living_room_morning
+              name: Morning
+              tap_action:
+                action: call-service
+                service: scene.turn_on
+                service_data:
+                  entity_id: scene.living_room_morning
+              show_state: false
+            - type: button
+              entity: scene.living_room_day
+              name: Day
+              tap_action:
+                action: call-service
+                service: scene.turn_on
+                service_data:
+                  entity_id: scene.living_room_day
+              show_state: false
+            - type: button
+              entity: scene.living_room_evening
+              name: Evening
+              tap_action:
+                action: call-service
+                service: scene.turn_on
+                service_data:
+                  entity_id: scene.living_room_evening
+              show_state: false
+            - type: button
+              entity: scene.living_room_night
+              name: Night
+              tap_action:
+                action: call-service
+                service: scene.turn_on
+                service_data:
+                  entity_id: scene.living_room_night
+              show_state: false
+    
+      # Schedule Display
+      - type: markdown
+        title: Schedule
+        content: |
+          {% set room = states('input_select.room_selector') %}
+          {% if room and room != 'unknown' and room != 'unavailable' %}
+            {% set custom_schedule = states('input_boolean.' ~ room ~ '_custom_schedule') %}
+            {% set s1 = states('input_datetime.' ~ room ~ '_s1_start') if custom_schedule == 'on' else '06:00:00' %}
+            {% set s2 = states('input_datetime.' ~ room ~ '_s2_start') if custom_schedule == 'on' else '09:00:00' %}
+            {% set s3 = states('input_datetime.' ~ room ~ '_s3_start') if custom_schedule == 'on' else '17:00:00' %}
+            {% set s4 = states('input_datetime.' ~ room ~ '_s4_start') if custom_schedule == 'on' else '22:00:00' %}
+            
+            **Morning**: {{ s1[:5] }} → Day
+            
+            **Day**: {{ s2[:5] }} → Evening
+            
+            **Evening**: {{ s3[:5] }} → Night
+            
+            **Night**: {{ s4[:5] }} → Morning
+            
+            {% if custom_schedule == 'on' %}
+              *Custom schedule enabled*
+            {% else %}
+              *Default schedule (06:00, 09:00, 17:00, 22:00)*
+            {% endif %}
+          {% else %}
+            Please select a room above.
+          {% endif %}
+    
