--- a/gitops/apps/home-assistant/dashboards-configmap.yaml
+++ b/gitops/apps/home-assistant/dashboards-configmap.yaml
@@ -3,10 +3,385 @@ kind: ConfigMap
 metadata:
   name: homeassistant-dashboards
 data:
+  room_schedule_configuration.yaml: |
+    views:
+      - title: Room Schedule Configuration
+        path: room-schedule-configuration
+        cards:
+          - type: vertical-stack
+            cards:
+              # Room selector dropdown
+              - type: entities
+                title: Select Room
+                entities:
+                  - entity: input_select.room_selector
+                    name: Room
+    
+              # Time Window selector dropdown
+              - type: entities
+                title: Select Time Window
+                entities:
+                  - entity: input_select.time_window_selector
+                    name: Time Window
+    
+              # Custom Schedule Toggle
+              - type: conditional
+                conditions:
+                  - entity: input_select.room_selector
+                    state: bedroom
+                card:
+                  type: entities
+                  title: Schedule Settings
+                  entities:
+                    - entity: input_boolean.bedroom_custom_schedule
+              - type: conditional
+                conditions:
+                  - entity: input_select.room_selector
+                    state: living_room
+                card:
+                  type: entities
+                  title: Schedule Settings
+                  entities:
+                    - entity: input_boolean.living_room_custom_schedule
+              - type: conditional
+                conditions:
+                  - entity: input_select.room_selector
+                    state: kitchen
+                card:
+                  type: entities
+                  title: Schedule Settings
+                  entities:
+                    - entity: input_boolean.kitchen_custom_schedule
+              - type: conditional
+                conditions:
+                  - entity: input_select.room_selector
+                    state: bathroom
+                card:
+                  type: entities
+                  title: Schedule Settings
+                  entities:
+                    - entity: input_boolean.bathroom_custom_schedule
+              - type: conditional
+                conditions:
+                  - entity: input_select.room_selector
+                    state: hallway
+                card:
+                  type: entities
+                  title: Schedule Settings
+                  entities:
+                    - entity: input_boolean.hallway_custom_schedule
+    
+              # Morning Schedule Configuration
+              - type: conditional
+                conditions:
+                  - entity: input_select.time_window_selector
+                    state: morning
+                card:
+                  type: conditional
+                  conditions:
+                    - entity: input_select.room_selector
+                      state: bedroom
+                  card:
+                    type: entities
+                    title: Morning Schedule
+                    entities:
+                      - entity: input_datetime.bedroom_s1_start
+                      - entity: input_select.bedroom_morning_scene
+              - type: conditional
+                conditions:
+                  - entity: input_select.time_window_selector
+                    state: morning
+                card:
+                  type: conditional
+                  conditions:
+                    - entity: input_select.room_selector
+                      state: living_room
+                  card:
+                    type: entities
+                    title: Morning Schedule
+                    entities:
+                      - entity: input_datetime.living_room_s1_start
+                      - entity: input_select.living_room_morning_scene
+              - type: conditional
+                conditions:
+                  - entity: input_select.time_window_selector
+                    state: morning
+                card:
+                  type: conditional
+                  conditions:
+                    - entity: input_select.room_selector
+                      state: kitchen
+                  card:
+                    type: entities
+                    title: Morning Schedule
+                    entities:
+                      - entity: input_datetime.kitchen_s1_start
+                      - entity: input_select.kitchen_morning_scene
+              - type: conditional
+                conditions:
+                  - entity: input_select.time_window_selector
+                    state: morning
+                card:
+                  type: conditional
+                  conditions:
+                    - entity: input_select.room_selector
+                      state: bathroom
+                  card:
+                    type: entities
+                    title: Morning Schedule
+                    entities:
+                      - entity: input_datetime.bathroom_s1_start
+                      - entity: input_select.bathroom_morning_scene
+              - type: conditional
+                conditions:
+                  - entity: input_select.time_window_selector
+                    state: morning
+                card:
+                  type: conditional
+                  conditions:
+                    - entity: input_select.room_selector
+                      state: hallway
+                  card:
+                    type: entities
+                    title: Morning Schedule
+                    entities:
+                      - entity: input_datetime.hallway_s1_start
+                      - entity: input_select.hallway_morning_scene
+    
+              # Day Schedule Configuration
+              - type: conditional
+                conditions:
+                  - entity: input_select.time_window_selector
+                    state: day
+                card:
+                  type: conditional
+                  conditions:
+                    - entity: input_select.room_selector
+                      state: bedroom
+                  card:
+                    type: entities
+                    title: Day Schedule
+                    entities:
+                      - entity: input_datetime.bedroom_s2_start
+                      - entity: input_select.bedroom_day_scene
+              - type: conditional
+                conditions:
+                  - entity: input_select.time_window_selector
+                    state: day
+                card:
+                  type: conditional
+                  conditions:
+                    - entity: input_select.room_selector
+                      state: living_room
+                  card:
+                    type: entities
+                    title: Day Schedule
+                    entities:
+                      - entity: input_datetime.living_room_s2_start
+                      - entity: input_select.living_room_day_scene
+              - type: conditional
+                conditions:
+                  - entity: input_select.time_window_selector
+                    state: day
+                card:
+                  type: conditional
+                  conditions:
+                    - entity: input_select.room_selector
+                      state: kitchen
+                  card:
+                    type: entities
+                    title: Day Schedule
+                    entities:
+                      - entity: input_datetime.kitchen_s2_start
+                      - entity: input_select.kitchen_day_scene
+              - type: conditional
+                conditions:
+                  - entity: input_select.time_window_selector
+                    state: day
+                card:
+                  type: conditional
+                  conditions:
+                    - entity: input_select.room_selector
+                      state: bathroom
+                  card:
+                    type: entities
+                    title: Day Schedule
+                    entities:
+                      - entity: input_datetime.bathroom_s2_start
+                      - entity: input_select.bathroom_day_scene
+              - type: conditional
+                conditions:
+                  - entity: input_select.time_window_selector
+                    state: day
+                card:
+                  type: conditional
+                  conditions:
+                    - entity: input_select.room_selector
+                      state: hallway
+                  card:
+                    type: entities
+                    title: Day Schedule
+                    entities:
+                      - entity: input_datetime.hallway_s2_start
+                      - entity: input_select.hallway_day_scene
+    
+              # Evening Schedule Configuration
+              - type: conditional
+                conditions:
+                  - entity: input_select.time_window_selector
+                    state: evening
+                card:
+                  type: conditional
+                  conditions:
+                    - entity: input_select.room_selector
+                      state: bedroom
+                  card:
+                    type: entities
+                    title: Evening Schedule
+                    entities:
+                      - entity: input_datetime.bedroom_s3_start
+                      - entity: input_select.bedroom_evening_scene
+              - type: conditional
+                conditions:
+                  - entity: input_select.time_window_selector
+                    state: evening
+                card:
+                  type: conditional
+                  conditions:
+                    - entity: input_select.room_selector
+                      state: living_room
+                  card:
+                    type: entities
+                    title: Evening Schedule
+                    entities:
+                      - entity: input_datetime.living_room_s3_start
+                      - entity: input_select.living_room_evening_scene
+              - type: conditional
+                conditions:
+                  - entity: input_select.time_window_selector
+                    state: evening
+                card:
+                  type: conditional
+                  conditions:
+                    - entity: input_select.room_selector
+                      state: kitchen
+                  card:
+                    type: entities
+                    title: Evening Schedule
+                    entities:
+                      - entity: input_datetime.kitchen_s3_start
+                      - entity: input_select.kitchen_evening_scene
+              - type: conditional
+                conditions:
+                  - entity: input_select.time_window_selector
+                    state: evening
+                card:
+                  type: conditional
+                  conditions:
+                    - entity: input_select.room_selector
+                      state: bathroom
+                  card:
+                    type: entities
+                    title: Evening Schedule
+                    entities:
+                      - entity: input_datetime.bathroom_s3_start
+                      - entity: input_select.bathroom_evening_scene
+              - type: conditional
+                conditions:
+                  - entity: input_select.time_window_selector
+                    state: evening
+                card:
+                  type: conditional
+                  conditions:
+                    - entity: input_select.room_selector
+                      state: hallway
+                  card:
+                    type: entities
+                    title: Evening Schedule
+                    entities:
+                      - entity: input_datetime.hallway_s3_start
+                      - entity: input_select.hallway_evening_scene
+    
+              # Night Schedule Configuration
+              - type: conditional
+                conditions:
+                  - entity: input_select.time_window_selector
+                    state: night
+                card:
+                  type: conditional
+                  conditions:
+                    - entity: input_select.room_selector
+                      state: bedroom
+                  card:
+                    type: entities
+                    title: Night Schedule
+                    entities:
+                      - entity: input_datetime.bedroom_s4_start
+                      - entity: input_select.bedroom_night_scene
+              - type: conditional
+                conditions:
+                  - entity: input_select.time_window_selector
+                    state: night
+                card:
+                  type: conditional
+                  conditions:
+                    - entity: input_select.room_selector
+                      state: living_room
+                  card:
+                    type: entities
+                    title: Night Schedule
+                    entities:
+                      - entity: input_datetime.living_room_s4_start
+                      - entity: input_select.living_room_night_scene
+              - type: conditional
+                conditions:
+                  - entity: input_select.time_window_selector
+                    state: night
+                card:
+                  type: conditional
+                  conditions:
+                    - entity: input_select.room_selector
+                      state: kitchen
+                  card:
+                    type: entities
+                    title: Night Schedule
+                    entities:
+                      - entity: input_datetime.kitchen_s4_start
+                      - entity: input_select.kitchen_night_scene
+              - type: conditional
+                conditions:
+                  - entity: input_select.time_window_selector
+                    state: night
+                card:
+                  type: conditional
+                  conditions:
+                    - entity: input_select.room_selector
+                      state: bathroom
+                  card:
+                    type: entities
+                    title: Night Schedule
+                    entities:
+                      - entity: input_datetime.bathroom_s4_start
+                      - entity: input_select.bathroom_night_scene
+              - type: conditional
+                conditions:
+                  - entity: input_select.time_window_selector
+                    state: night
+                card:
+                  type: conditional
+                  conditions:
+                    - entity: input_select.room_selector
+                      state: hallway
+                  card:
+                    type: entities
+                    title: Night Schedule
+                    entities:
+                      - entity: input_datetime.hallway_s4_start
+                      - entity: input_select.hallway_night_scene
   room_switch_control.yaml: |
     views:
-      - title: Room Switch Control
-        path: room-switch-control
+      - title: Room Schedule Viewer
+        path: room-schedule-viewer
         cards:
           - type: vertical-stack
             cards:
@@ -346,21 +721,42 @@ data:
               {% set room = states('input_select.room_selector') %}
               {% if room and room != 'unknown' and room != 'unavailable' %}
                 {% set custom_schedule = states('input_boolean.' ~ room ~ '_custom_schedule') %}
-                {% set s1 = states('input_datetime.' ~ room ~ '_s1_start') if custom_schedule == 'on' else '06:00:00' %}
-                {% set s2 = states('input_datetime.' ~ room ~ '_s2_start') if custom_schedule == 'on' else '09:00:00' %}
-                {% set s3 = states('input_datetime.' ~ room ~ '_s3_start') if custom_schedule == 'on' else '17:00:00' %}
-                {% set s4 = states('input_datetime.' ~ room ~ '_s4_start') if custom_schedule == 'on' else '22:00:00' %}
+                {% if custom_schedule == 'on' %}
+                  {% set s1_raw = states('input_datetime.' ~ room ~ '_s1_start') %}
+                  {% set s2_raw = states('input_datetime.' ~ room ~ '_s2_start') %}
+                  {% set s3_raw = states('input_datetime.' ~ room ~ '_s3_start') %}
+                  {% set s4_raw = states('input_datetime.' ~ room ~ '_s4_start') %}
+                  {% set s1 = s1_raw.split(' ')[-1][:5] if ' ' in s1_raw else (s1_raw[:5] if s1_raw|length >= 5 else '06:00') %}
+                  {% set s2 = s2_raw.split(' ')[-1][:5] if ' ' in s2_raw else (s2_raw[:5] if s2_raw|length >= 5 else '09:00') %}
+                  {% set s3 = s3_raw.split(' ')[-1][:5] if ' ' in s3_raw else (s3_raw[:5] if s3_raw|length >= 5 else '17:00') %}
+                  {% set s4 = s4_raw.split(' ')[-1][:5] if ' ' in s4_raw else (s4_raw[:5] if s4_raw|length >= 5 else '22:00') %}
+                {% else %}
+                  {% set s1 = '06:00' %}
+                  {% set s2 = '09:00' %}
+                  {% set s3 = '17:00' %}
+                  {% set s4 = '22:00' %}
+                {% endif %}
                 
-                **Morning**: {{ s1[:5] }} - {{ s2[:5] }} → Day
+                {% set morning_override = states('input_select.' ~ room ~ '_morning_scene') %}
+                {% set day_override = states('input_select.' ~ room ~ '_day_scene') %}
+                {% set evening_override = states('input_select.' ~ room ~ '_evening_scene') %}
+                {% set night_override = states('input_select.' ~ room ~ '_night_scene') %}
                 
-                **Day**: {{ s2[:5] }} - {{ s3[:5] }} → Evening
+                {% set morning_scene = morning_override if morning_override not in ['unknown', 'unavailable', ''] else 'scene.' ~ room ~ '_morning' %}
+                {% set day_scene = day_override if day_override not in ['unknown', 'unavailable', ''] else 'scene.' ~ room ~ '_day' %}
+                {% set evening_scene = evening_override if evening_override not in ['unknown', 'unavailable', ''] else 'scene.' ~ room ~ '_evening' %}
+                {% set night_scene = night_override if night_override not in ['unknown', 'unavailable', ''] else 'scene.' ~ room ~ '_night' %}
                 
-                **Evening**: {{ s3[:5] }} - {{ s4[:5] }} → Night
-                
-                **Night**: {{ s4[:5] }} - {{ s1[:5] }} → Morning
+                | Time Slot | Scene | Activation Time |
+                |-----------|-------|----------------|
+                | Morning | `{{ morning_scene }}` | {{ s1 }} |
+                | Day | `{{ day_scene }}` | {{ s2 }} |
+                | Evening | `{{ evening_scene }}` | {{ s3 }} |
+                | Night | `{{ night_scene }}` | {{ s4 }} |
                 
                 {% if custom_schedule == 'on' %}
                   *Custom schedule enabled*
+                  <br>*Debug: s1={{ s1_raw }}, s2={{ s2_raw }}, s3={{ s3_raw }}, s4={{ s4_raw }}*
                 {% else %}
                   *Default schedule (06:00, 09:00, 17:00, 22:00)*
                 {% endif %}
