--- a/gitops/apps/home-assistant/configuration/dashboards/room_schedule_configuration.yaml
+++ b/gitops/apps/home-assistant/configuration/dashboards/room_schedule_configuration.yaml
@@ -18,53 +18,6 @@ views:
               - entity: input_select.time_window_selector
                 name: Time Window
 
-          # Custom Schedule Toggle
-          - type: conditional
-            conditions:
-              - entity: input_select.room_selector
-                state: bedroom
-            card:
-              type: entities
-              title: Schedule Settings
-              entities:
-                - entity: input_boolean.bedroom_custom_schedule
-          - type: conditional
-            conditions:
-              - entity: input_select.room_selector
-                state: living_room
-            card:
-              type: entities
-              title: Schedule Settings
-              entities:
-                - entity: input_boolean.living_room_custom_schedule
-          - type: conditional
-            conditions:
-              - entity: input_select.room_selector
-                state: kitchen
-            card:
-              type: entities
-              title: Schedule Settings
-              entities:
-                - entity: input_boolean.kitchen_custom_schedule
-          - type: conditional
-            conditions:
-              - entity: input_select.room_selector
-                state: bathroom
-            card:
-              type: entities
-              title: Schedule Settings
-              entities:
-                - entity: input_boolean.bathroom_custom_schedule
-          - type: conditional
-            conditions:
-              - entity: input_select.room_selector
-                state: hallway
-            card:
-              type: entities
-              title: Schedule Settings
-              entities:
-                - entity: input_boolean.hallway_custom_schedule
-
           # Morning Schedule Configuration
           - type: conditional
             conditions:
@@ -79,6 +32,7 @@ views:
                 type: entities
                 title: Morning Schedule
                 entities:
+                  - entity: input_boolean.bedroom_morning_custom_time
                   - entity: input_datetime.bedroom_s1_start
                   - entity: input_select.bedroom_morning_scene
           - type: conditional
@@ -94,6 +48,7 @@ views:
                 type: entities
                 title: Morning Schedule
                 entities:
+                  - entity: input_boolean.living_room_morning_custom_time
                   - entity: input_datetime.living_room_s1_start
                   - entity: input_select.living_room_morning_scene
           - type: conditional
@@ -109,6 +64,7 @@ views:
                 type: entities
                 title: Morning Schedule
                 entities:
+                  - entity: input_boolean.kitchen_morning_custom_time
                   - entity: input_datetime.kitchen_s1_start
                   - entity: input_select.kitchen_morning_scene
           - type: conditional
@@ -124,6 +80,7 @@ views:
                 type: entities
                 title: Morning Schedule
                 entities:
+                  - entity: input_boolean.bathroom_morning_custom_time
                   - entity: input_datetime.bathroom_s1_start
                   - entity: input_select.bathroom_morning_scene
           - type: conditional
@@ -139,6 +96,7 @@ views:
                 type: entities
                 title: Morning Schedule
                 entities:
+                  - entity: input_boolean.hallway_morning_custom_time
                   - entity: input_datetime.hallway_s1_start
                   - entity: input_select.hallway_morning_scene
 
@@ -156,6 +114,7 @@ views:
                 type: entities
                 title: Day Schedule
                 entities:
+                  - entity: input_boolean.bedroom_day_custom_time
                   - entity: input_datetime.bedroom_s2_start
                   - entity: input_select.bedroom_day_scene
           - type: conditional
@@ -171,6 +130,7 @@ views:
                 type: entities
                 title: Day Schedule
                 entities:
+                  - entity: input_boolean.living_room_day_custom_time
                   - entity: input_datetime.living_room_s2_start
                   - entity: input_select.living_room_day_scene
           - type: conditional
@@ -186,6 +146,7 @@ views:
                 type: entities
                 title: Day Schedule
                 entities:
+                  - entity: input_boolean.kitchen_day_custom_time
                   - entity: input_datetime.kitchen_s2_start
                   - entity: input_select.kitchen_day_scene
           - type: conditional
@@ -201,6 +162,7 @@ views:
                 type: entities
                 title: Day Schedule
                 entities:
+                  - entity: input_boolean.bathroom_day_custom_time
                   - entity: input_datetime.bathroom_s2_start
                   - entity: input_select.bathroom_day_scene
           - type: conditional
@@ -216,6 +178,7 @@ views:
                 type: entities
                 title: Day Schedule
                 entities:
+                  - entity: input_boolean.hallway_day_custom_time
                   - entity: input_datetime.hallway_s2_start
                   - entity: input_select.hallway_day_scene
 
@@ -233,6 +196,7 @@ views:
                 type: entities
                 title: Evening Schedule
                 entities:
+                  - entity: input_boolean.bedroom_evening_custom_time
                   - entity: input_datetime.bedroom_s3_start
                   - entity: input_select.bedroom_evening_scene
           - type: conditional
@@ -248,6 +212,7 @@ views:
                 type: entities
                 title: Evening Schedule
                 entities:
+                  - entity: input_boolean.living_room_evening_custom_time
                   - entity: input_datetime.living_room_s3_start
                   - entity: input_select.living_room_evening_scene
           - type: conditional
@@ -263,6 +228,7 @@ views:
                 type: entities
                 title: Evening Schedule
                 entities:
+                  - entity: input_boolean.kitchen_evening_custom_time
                   - entity: input_datetime.kitchen_s3_start
                   - entity: input_select.kitchen_evening_scene
           - type: conditional
@@ -278,6 +244,7 @@ views:
                 type: entities
                 title: Evening Schedule
                 entities:
+                  - entity: input_boolean.bathroom_evening_custom_time
                   - entity: input_datetime.bathroom_s3_start
                   - entity: input_select.bathroom_evening_scene
           - type: conditional
@@ -293,6 +260,7 @@ views:
                 type: entities
                 title: Evening Schedule
                 entities:
+                  - entity: input_boolean.hallway_evening_custom_time
                   - entity: input_datetime.hallway_s3_start
                   - entity: input_select.hallway_evening_scene
 
@@ -310,6 +278,7 @@ views:
                 type: entities
                 title: Night Schedule
                 entities:
+                  - entity: input_boolean.bedroom_night_custom_time
                   - entity: input_datetime.bedroom_s4_start
                   - entity: input_select.bedroom_night_scene
           - type: conditional
@@ -325,6 +294,7 @@ views:
                 type: entities
                 title: Night Schedule
                 entities:
+                  - entity: input_boolean.living_room_night_custom_time
                   - entity: input_datetime.living_room_s4_start
                   - entity: input_select.living_room_night_scene
           - type: conditional
@@ -340,6 +310,7 @@ views:
                 type: entities
                 title: Night Schedule
                 entities:
+                  - entity: input_boolean.kitchen_night_custom_time
                   - entity: input_datetime.kitchen_s4_start
                   - entity: input_select.kitchen_night_scene
           - type: conditional
@@ -355,6 +326,7 @@ views:
                 type: entities
                 title: Night Schedule
                 entities:
+                  - entity: input_boolean.bathroom_night_custom_time
                   - entity: input_datetime.bathroom_s4_start
                   - entity: input_select.bathroom_night_scene
           - type: conditional
@@ -370,5 +342,6 @@ views:
                 type: entities
                 title: Night Schedule
                 entities:
+                  - entity: input_boolean.hallway_night_custom_time
                   - entity: input_datetime.hallway_s4_start
                   - entity: input_select.hallway_night_scene
